changed the module system, settings can no longer be static